# cognidiff

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: config.py  exceptions.py  main.py  worker.py
app/agent/: graph.py  prompts.py  state.py
app/agent/nodes/: analyze.py  fetch_diff.py  post_review.py  rag_lookup.py
app/db/: init.sql
app/github/: client.py  diff_parser.py  models.py  webhook.py
app/ingestion/: chunker.py  cloner.py  embedder.py  pipeline.py
app/retrieval/: retriever.py  store.py
tests/: test_chunker.py  test_cloner.py  test_diff_parser.py  test_embedder.py  test_retriever.py  test_store.py
